# react-intl-auto

./: .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  Cargo.toml  Cargo.toml.backup  HYBRID_EPIC.md  MODERNIZE_EPIC.md  README.md  build.js  cli.js  debug_dot_path.js  debug_project_root.js  debug_regex.js  debug_relative_to.js  debug_rust.rs  debug_separator.rs  debug_test.js  extract.d.ts  extract.js  global.d.ts  index.js  jest.config.js  package-lock.json  package.json  readme.md  swc-plugin-react-intl-auto.wasm  swc-plugin.js  test_find_project_root.rs  test_processing_order.js  test_relative_to.js  test_relative_to_paths.js  test_remove_prefix.js  tsconfig.json
.ai/plans/: HYBRID_EXTRACT.hybrid-message-extraction-plan.md  PLUGIN_MOD.modernize-swc-plugin-plan.md
.cargo/: config.toml
.github/: RELEASE.md  dependabot.yml
.github/workflows/: check-token.yml  ci.yml  dependabot.yml  napi-rs.yml  publish-github-packages.yml  publish.yml  setup-labels.yml  test-matrix.yml
.prompts/: CODE_SPLIT.md  IMPORT_CHECK_FIX.MD
__tests__/: components.test.ts  defineMessages.test.js  formatMessage.test.js  hash-id.test.js  hook.test.ts  index.test.js  index.test.ts  injection.test.ts  jsx.test.js  options.test.js  setup.js  testUtils.ts
__tests__/__snapshots__/: components.test.ts.snap  defineMessages.test.js.snap  formatMessage.test.js.snap  hash-id.test.js.snap  hook.test.ts.snap  index.test.js.snap  index.test.ts.snap  injection.test.ts.snap  jsx.test.js.snap  options.test.js.snap
cli/: version.ts
crates/cli/: Cargo.toml
crates/cli/src/: core.rs  extractor.rs  lib.rs  main.rs
crates/cli/src/visitors/: call.rs  import.rs  jsx.rs  vars.rs
crates/react-intl-core/: Cargo.toml
crates/react-intl-core/src/: ast_analysis.rs  id_generator.rs  import_check.rs  lib.rs  message_extractor.rs  path_utils.rs  types.rs
crates/react-intl-core/src/ast/: call.rs  import.rs  jsx.rs  mod.rs  utils.rs  vars.rs
crates/swc-plugin/: Cargo.toml
crates/swc-plugin/src/: lib.rs  project_root_test.rs  types.rs  utils.rs  visitors.backup.rs  visitors.rs  visitors_new.rs
crates/swc-plugin/src/visitors/: call.rs  import.rs  jsx.rs  mod.rs
docs/: CLI.md  JS_API.md  MIGRATION.md
examples/basic/: .swcrc  README.md  index.d.ts  index.js  package-lock.json  package.json  swc_plugin.wasm
examples/basic/src/components/: App.tsx
examples/basic/src/messages/: demo.ts
sandbox/basic/: .swcrc  README.md
sandbox/basic/src/components/: App.tsx  Button.tsx  i18n.ts
scripts/: build-plugin.js  check-npm-token.js  create-labels.js  release.js  test-release.js
src/: lib.rs  types.rs  utils.rs  visitors.rs
src/__fixtures__/: messages.js
src/__tests__/: components.test.ts  hook.test.ts  index.test.ts  injection.test.ts  project_root.test.rs
src/__tests__/__snapshots__/: components.test.ts.snap  hook.test.ts.snap  index.test.ts.snap  injection.test.ts.snap
src/utils/: testUtils.ts
swc-plugin/: .gitignore  Cargo.toml  README.md  build.js  index.d.ts  index.js  package.json  test.js
swc-plugin/examples/basic/: package.json  swc.config.js
swc-plugin/src/: lib.rs  lib_simple.rs  utils.rs  visitors.rs
tests/: components.test.ts  definition.test.ts  hook.test.ts  injection.test.ts  testUtils.test.ts  testUtils.ts
tests/__fixtures__/components/: all-props.tsx  all-supported-components.tsx  conditional-rendering.tsx  default.tsx  different-module-source.tsx  import-as.tsx  index.ts  multiple-uses.tsx  nested-jsx.tsx  not-imported.tsx  spread-attribute.tsx  user-id.tsx  using-key.tsx  with-value-in-message.tsx  with-variable-message.tsx
tests/__fixtures__/definition/: args-non-object.js  args-not-found.js  callee-not-identifier.js  default.js  empty-args.js  eval-string.js  import-as.js  index.ts  leading-comment-with-description.js  leading-comment.js  module-source-name.js  multi-export.js  not-imported.js  object-arg.js  string-literal.js  use-variable.js  with-other-func.js  with-other-specifier.js  with-template-literal.js
tests/__fixtures__/hook/: default.js  different-module-source.js  id-provided.js  import-as.js  index.ts  multiple-uses.js  not-imported.js  some-supported-use-cases.js  with-custom-properties.js  with-value-in-message.js  with-variable-message-descriptor.js  with-variable-message.js
tests/__fixtures__/injection/: different-module-source.js  id-provided.js  import-as.js  index.ts  multiple-uses.js  not-imported.js  some-supported-use-cases.js  with-custom-properties.js  with-injectIntl.js  with-value-in-message.js  with-variable-message-descriptor.js  with-variable-message.js
tests/__snapshots__/: components.test.ts.snap  definition.test.ts.snap  hook.test.ts.snap  injection.test.ts.snap
