[package]
name = "swc-plugin-react-intl-auto"
version = "1.0.7"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
swc_core = { version = "43.0.*", features = ["ecma_plugin_transform", "ecma_ast", "ecma_visit", "ecma_utils"] }
murmur3 = "0.5"
regex = "1"
pathdiff = "0.2"

[dev-dependencies]
tempfile = "3.23.0"

# .cargo/config.toml defines few alias to build plugin.
# cargo build-wasip1 generates wasm32-wasip1 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
