[workspace]
members = ["crates/react-intl-core", "crates/swc-plugin", "crates/cli"]
resolver = "2"

[workspace.package]
version = "1.0.8"
edition = "2021"
authors = ["Your Name"]
license = "MIT"
repository = "https://github.com/DonVadimon/react-intl-auto.git"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
murmur3 = "0.5"
base64 = "0.22"
regex = "1"
pathdiff = "0.2"

# SWC dependencies (shared)
swc_core = { version = "47.0.*", features = ["ecma_ast", "ecma_visit", "ecma_utils", "ecma_parser"] }

# Dev dependencies
tempfile = "3.23.0"

[profile.release]
lto = true

# .cargo/config.toml defines few alias to build plugin.
# cargo build-wasip1 generates wasm32-wasip1 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
