[package]
name = "swc-plugin-react-intl-auto"
version = "0.1.0"
edition = "2021"
description = "SWC plugin for automatic react-intl ID management"
license = "MIT"
repository = "https://github.com/akameco/babel-plugin-react-intl-auto"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
swc_plugin = "0.5"
swc_common = "0.32"
swc_ecma_ast = "0.111"
swc_ecma_parser = "0.131"
swc_ecma_utils = "0.111"
swc_ecma_visit = "0.85"
swc_ecma_transforms = "0.211"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
murmur3 = "0.0.13"
regex = "1.10"
pathdiff = "0.2"
