[package]
name = "react-intl-extract-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for extracting React Intl messages"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
swc_core = { workspace = true }
pathdiff = { workspace = true }

# Shared core library
react-intl-core = { path = "../react-intl-core" }

# CLI-specific dependencies
clap = { version = "4", features = ["derive"] }
globset = "0.4"
walkdir = "2"
anyhow = "1"

# napi-rs dependencies for JS bindings
napi = { version = "3", features = ["napi6", "tokio_rt"] }
napi-derive = "3"
