[package]
name = "react-intl-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for React Intl message extraction and ID generation"

[lib]
crate-type = ["lib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
murmur3 = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
pathdiff = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
